--- a/main.css
+++ b/main.css
@@ -126,3 +126,83 @@
     border-left: var(--bs-border-width) solid var(--bs-border-color);
     --bs-pagination-border-width: 0px;
 }
+
+.hidden-context {
+    display: none;
+}
+
+.show-context {
+    position: absolute;
+    background-color: white;
+    z-index: 3;
+    width: 250px;
+    border-radius: 10px;
+    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+}
+
+.wrapper .context-menu {
+    padding: 10px 12px;
+}
+
+.content .context-item {
+    list-style: none;
+    height: 50px;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 2px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    padding: 0 5px 0 10px;
+}
+
+.content .context-item:hover {
+    background-color: #d3d3d375;
+}
+
+.icon {
+    width: 25px;
+    height: 25px;
+    background-size: 200%;
+    margin-right: 5px;
+}
+
+.play-icon {
+    background: url("./Bootstrap/svg/play-fill.svg");
+}
+
+.trash-icon {
+    background: url("./Bootstrap/svg/trash3-fill.svg");
+}
+
+.edit-icon {
+    background: url("./Bootstrap/svg/pencil-square.svg");
+}
+
+.target-border {
+    border: var(--bs-border-width) solid var(--bs-border-color);
+}
+
+.target-dropdown {
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    height: 58px;
+    margin-top: 6px;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+}
+
+.target-dropdown:hover {
+    border: var(--bs-border-width) solid var(--bs-border-color);
+}
+
+.dropdown-item {
+    height: 2.25rem;
+}
+
+.dropdown-scroll {
+    scroll-behavior: smooth;
+    overflow: auto;
+    max-height: 250px;
+}
