--- a/main.css
+++ b/main.css
@@ -611,10 +611,12 @@ li.context-item > span {
 
 .gliphicon-box {
     cursor: default;
-    background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(59, 59, 59, 0.3));
     color: -internal-light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
     border-color: rgba(118, 118, 118, 0.3);
     width: 45px;
+    height: 30px;
+    background-color: var(--darkness);
+    border-radius: var(--bs-border-radius);
 }
 
 .inner-addon .x {
@@ -648,7 +650,6 @@ li.context-item > span {
     padding-left: 3px;
     background-color: var(--darkness);
     border-radius: var(--bs-border-radius);
-    color: -internal-light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
 }
 
 .id-box-container .x {
