--- a/main/main.css
+++ b/main/main.css
@@ -474,6 +474,20 @@ li.context-item > span {
     margin-right: 5px;
 }
 
+.big-icon {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    margin-right: 5px;
+    opacity: 0.4;
+    transition: 0.3s;
+}
+
+.big-icon:hover {
+    opacity: 0.8;
+    transition: 0.3s;
+}
+
 .add-rule-icon {
     margin: 4px;
     width: 34px;
